test/grammar/schema/check_block/check_block_fail_2/stderr.golden
error[E3M38]: EvaluationError
  --> ${CWD}/main.k:13:11
   |
13 | JohnDoe = Student {
   |           ^ Instance check failed
   |
  --> ${CWD}/main.k:11:1
   |
11 |         12 <= age <= 18
   |  Check failed on the condition
   |